tdf#117534: Draw with the right font on Windows

This re-applies the fix from 641b9cb1d0934b3f8b4a80279cb3f3f81ecc4707
that was dropped in bdccb7e9991d83029eb2f2f11327b54534a00db8.

Change-Id: Iaa56d387d621daacdbf0f01903fcf3d0ea8b83fa